# MVSTER

./: .gitignore  config.yaml  environment.yaml  pyproject.toml  requirements.txt  test_mvs4.py  train_mvs4.py  utils.py
datasets/: totemvs.py  transmvs.py
lists/ToteMVS/: test.txt  train.txt
models/: MVS4Net.py  mvs4net_utils.py
scripts/: download_tud.sh  test_dtu.sh  train_dtu.sh  upload_tud.sh
tests/: test_datasets_totemvs.py  test_datasets_transmvs.py  test_fpn.py
