[tool.poetry]
name = "mvster"
version = "0.1.0"
description = ""
authors = ["Pieter Tolsma <epieter.tolsma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^2.0.0"
torchvision = "^0.15.1"
tensorboardx = "^2.6"
opencv-python = "^4.7.0.72"
plyfile = "^0.9"
omegaconf = "^2.3.0"
pytest = "^7.3.1"
scikit-image = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
